--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Comfortaa', cursive;
+}
+
+.app {
+  width: 100vw;
+  height: 100vh;
+  background: #edf7fa;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.app .urlBar {
+  width: 100%;
+  max-width: 600px;
+  padding: 80px 60px 50px;
+  border-radius: 20px;
+  background-color: #5f6caf;
+  color: #fff;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+.app .urlBar #logo {
+  font-family: 'Righteous', cursive;
+  font-size: 50px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app .urlBar #form {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app .urlBar #form #bar {
+  width: 100%;
+  text-align: center;
+  margin: 30px 0 40px;
+  padding: 15px 10px;
+  border: none;
+  border-radius: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.app .urlBar #form #bar:focus {
+  outline: none;
+}
+
+.app .urlBar #form #bar::-moz-selection {
+  background-color: #ff8364;
+  color: #fff;
+}
+
+.app .urlBar #form #bar::selection {
+  background-color: #ff8364;
+  color: #fff;
+}
+
+.app .urlBar #form #btn {
+  width: 100%;
+  max-width: 160px;
+  padding: 20px 0;
+  border: none;
+  color: #fff;
+  background-color: #ff8364;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.app .urlBar #form #btn:focus {
+  outline: none;
+}
+
+.app .urlBar .prevUrls {
+  margin-top: 40px;
+}
+
+.app .urlBar .prevUrls .url {
+  width: 100%;
+  height: 50px;
+  display: block;
+  position: relative;
+}
+
+.app .urlBar .prevUrls .url .oldUrl {
+  float: left;
+}
+
+.app .urlBar .prevUrls .url .newUrl {
+  float: right;
+  cursor: pointer;
+  resize: none;
+  background-color: inherit;
+  border: none;
+  color: #fff;
+  outline: none;
+  min-width: 200px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow: hidden;
+  text-align: right;
+  text-decoration: underline;
+}
+
+.app .urlBar .prevUrls .url .balloon {
+  display: none;
+  position: absolute;
+  right: 0;
+  bottom: -10px;
+  background-color: #fff;
+  color: #000000;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.app .urlBar .prevUrls .url .balloon .arrow {
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #fff;
+  position: absolute;
+  top: -5px;
+  left: 45%;
+}
+
+@-webkit-keyframes copied {
+  0% {
+    display: block;
+    bottom: 0;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    display: block;
+    bottom: -10px;
   }
 }
+
+@keyframes copied {
+  0% {
+    display: block;
+    bottom: 0;
+  }
+  100% {
+    display: block;
+    bottom: -10px;
+  }
+}
+
+@-webkit-keyframes copied-rev {
+  0% {
+    display: block;
+    bottom: -10px;
+  }
+  100% {
+    bottom: 0;
+    display: none;
+  }
+}
+
+@keyframes copied-rev {
+  0% {
+    display: block;
+    bottom: -10px;
+  }
+  100% {
+    bottom: 0;
+    display: none;
+  }
+}
+/*# sourceMappingURL=App.css.map */
